[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Properties/Property.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Properties/ColorProperty.gd" type="Script" id=2]

[node name="ColorProperty" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="ColorDisplay" type="ColorRect" parent="." index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 162.0

[node name="Button" type="Button" parent="ColorDisplay" index="0"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -80.5
margin_right = 80.5
margin_bottom = 26.0
flat = true

[connection signal="pressed" from="ColorDisplay/Button" to="." method="_choose_color"]
